Job description fixed on mobile

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -355,7 +355,7 @@ a {
     transition: max-height 0.6s ease-in-out, border-bottom 0.2s ease-in-out 0.6s;
 
     &.visible {
-      max-height: 440px;
+      max-height: 496px;
     }
 
     .job-details {
